<resources>
    <string name="app_name">DnsChanger</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="rate">Rate</string>
    <string name="info_dns_button">Info about DNS</string>
    <string name="default_dns">Default DNS Addresses</string>
    <string name="default_dns_title">Public DNS providers</string>
    <string name="info_text_dns">DNS stands for Domain Name System.\n\nThe Domain Name System is used to resolve Domains (google.com, yahoo.com, example.com…) to IP Addresses (192.168.178.1 for example) to communicate over the Internet.\n\nIt is one of the most important systems used in IP-based networks.</string>
    <string name="vpn_explain">This App works without a rooted phone. \n\nTo make this possible all traffic is redirected using a VPN. This VPN redirects your traffic only locally, the data never leaves your phone using this VPN connection.\n\nYou\'ll be asked to allow the VPN connection in the next window, without permission from you the set DNS servers won\'t work.\n\n\nSource code can be found under https://git.frostnerd.com/PublicAndroidApps/DnsChanger.</string>
    <string name="information">Information</string>
    <string name="settings">Settings</string>
    <string name="title_notification">Notification</string>
    <string name="summary_notification">Show a notification when DNSChanger is running</string>
    <string name="title_start_boot">Start on boot</string>
    <string name="summary_start_boot">Automatically start DNSChanger when your phone is turned on</string>
    <string name="subtitle_configuring">Configuring [[x]]</string>
    <string name="menu_title_configure_v4">Configure IPv4</string>
    <string name="menu_title_configure_v6">Configure IPv6</string>
    <string name="action_resume">Resume</string>
    <string name="action_pause">Pause</string>
    <string name="action_stop">Stop</string>
    <string name="notification_paused">DNS Changer is paused</string>
    <string name="notification_running">DNS Changer is active</string>
    <string name="active">Active</string>
    <string name="paused">Paused</string>
    <string name="summary_auto_wifi">Automatically turn on DNS Changer when connecting to a wifi network</string>
    <string name="summary_auto_mobile">Automatically turn on DNS Changer when connecting to a mobile network</string>
    <string name="title_auto_wifi">Automatically start (WIFI)</string>
    <string name="title_auto_mobile">Automatically start (Mobile)</string>
    <string name="running">Active</string>
    <string name="not_running">Inactive</string>
    <string name="background_configure_error">Permission to start the VPN denied. \nThis could be the system denying vpn connections being started from the background for safety reasons.\n\nOpen the app to start the VPN</string>
    <string name="open_app">Open app</string>
    <string name="rate_request_text">Would you like to rate this app?\nIt\'d help spreading it and shows appreciation of my work.</string>
    <string name="not_now">Not now</string>
    <string name="dont_ask_again">Don\'t ask again</string>
    <string name="done">Done</string>
    <string name="check_validity">Please check the validity of your input</string>
    <string name="press_back_again">Press back again to leave (Discards changes!)</string>
    <string name="tasker_automation_conflict_text">This app is set to start/stop the vpn when the type of your network changes (Either Wifi or 3G).\nThis might conflict with this tasker plugin as the action might be overridden by the app itself (Only one VPN can be running at any given time).\n\nDo you want to disable these conflicting settings?</string>
    <string name="shortcut_conflict_text">This app is set to start/stop the vpn when the type of your network changes (Either Wifi or 3G).\nThis might conflict with any setting when starting from a shortcut as the action might be overridden by the app itself (Only one VPN can be running at any given time).\n\nDo you want to disable these conflicting settings?</string>
    <string name="warning">Warning</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="contact_developer">Contact developer</string>
    <string name="warning_started_using_tasker">DNSChanger was started using Tasker. Stopping it may interrupt with it. Starting it not using tasker does not apply the DNS Servers configured using Tasker. Stop anyway?</string>
    <string name="app_supports_tasker_text">This app supports Tasker and can be used as an action plugin to automate DNS usage.</string>
    <string name="tasker_support">Tasker support</string>
    <string name="create_shortcut">Create a shortcut</string>
    <string name="shortcut_created">Shortcut created.</string>
    <string name="summary_show_used_dns">Show the currently used DNS servers in the notification</string>
    <string name="title_show_used_dns">Show DNS servers</string>
    <string name="notification">Notification</string>
    <string name="title_automation">Automation</string>
    <string name="title_general">General</string>
    <string name="summary_info">Show general info about this app</string>
    <string name="title_info">Info</string>
    <string name="summary_automation_warn">Warning: Using any of these might interfere with active Tasker profiles using this app!</string>
    <string name="title_pin">Pin</string>
    <string name="summary_pin">Enable pin protection</string>
    <string name="summary_pin_value">Click here to change the PIN</string>
    <string name="title_pin_value">Change Pin</string>
    <string name="settings_information_text">This app was made by Daniel Wolf (frostnerd.com)\n\nIt uses icons made by Google (Material icon pack - https://material.io/icons/)\n\n\nIf you are missing a feature, found a bug or just got a general request, feel free to contact me at support@frostnerd.com\nThe Sourcecode to this app can be viewed at https://git.frostnerd.com/PublicAndroidApps/DnsChanger</string>
    <string name="create_tasker_action">Creating Tasker Action</string>
    <string name="show">Show</string>
    <string name="android4_4_warning">Warning: your Android version (4.4) is known to have problems with VPN connections. If this app crashes or just doesn\'t work it\'s most likely your system and not the fault of this app.\nI\'m sorry for the inconvenience.</string>
    <string name="title_auto_pause">Pause DNS automatically</string>
    <string name="summary_auto_pause">Automatically pause the DNS when certain apps are in the foreground (available in the next version)</string>
    <string name="title_autopause_apps">Apps which pause DNS Changer. Current: [[count]]</string>
    <string name="pin_dialog_title">Pin protected</string>
    <string name="pin_dialog_text">You choose to pinprotect this app. Please enter the pin you provided in the settings (default: 1234)</string>
    <string name="title_pin_notification">Protect Notification</string>
    <string name="summary_pin_notification">Ask for the pin when stopping/pausing DNSChanger from the notification</string>
    <string name="title_pin_app">Protect App</string>
    <string name="summary_pin_app">Ask for the pin when starting the app</string>
    <string name="title_category_pin">Pin protection</string>
    <string name="summary_version">Version [[version]] ([[code]])\n\n© Daniel Wolf 2017\nAll rights reserved\n\nBrazilian translation by Lukinhas\nChinese translation by Majida Whale</string>
    <string name="usage_stats_info_text">To automatically pause DNS Changer when a certain app is in the front, this app needs access to usage data. \n\nIn the next window, please grant DNSChanger access to this data or else you won\'t be able to use this setting.\n\n\nNo data execept for currently running applications is requested. No data is saved or transmitted.\nThe source code is publicy available at https://git.frostnerd.com/PublicAndroidApps/DnsChanger if you want to make sure yourself.</string>
    <string name="title_remove_usage_data">Remove access to usage data</string>
    <string name="summary_remove_usage_data">Access to usage data was granted. Click here to revoke that permission.</string>
    <string name="autopause_appselect_info_text">Each App marked will pause DNS Changer automatically when being in the front. This might be useful as for instance in the store apps can\'t be downloaded when running with a changed DNS.</string>
    <string-array name="tasker_configure_actions">
        <item>Start DNSChanger</item>
        <item>Stop DNSChanger</item>
        <item>Pause DNSChanger</item>
        <item>Resume DNSChanger</item>
    </string-array>
    <string name="error">Error</string>
    <string name="vpn_error_explain">The App crashed unexpectedly. This could either imply that the way this app works is not supported by your phone/ROM or a general error occurred (which most likely indicated that I did something wrong).\n\nEither way, sending the crash report would help me a lot and could possibly lead to a fix.\nDo you want to send it to me?</string>
    <string name="send_crash_report">Send crash report</string>
    <string name="deep_link_title">DNS Changer by Frostnerd</string>
    <string name="summary_pin_tile">Ask for the pin when starting/stopping from QuickSettings</string>
    <string name="title_pin_tile">Protect Quick settings</string>
    <string name="tile_start">Start DNS Changer</string>
    <string name="tile_stop">Stop DNS Changer</string>
    <string name="tile_pause">Pause DNS Changer</string>
    <string name="tile_resume">Resume DNS Changer</string>
    <string name="summary_disable_network_change">Automatically disable when changing network (e.g Wifi to 3G). DNS Changer will activate again if set so in the previous settings.</string>
    <string name="title_disable_network_change">Disable on network change</string>
    <string name="title_share_app">Share this app</string>
    <string name="summary_share_app">Sharing this app with your friends or other people would really help a lot spreading this app.</string>
    <string name="app_share_text">Hey, have a look at this DNS changing app for android. You can download it here: https://play.google.com/store/apps/details?id=com.frostnerd.dnschanger</string>
    <string name="share_using">Share using</string>
    <string name="title_import_export">Import / Export</string>
    <string name="title_export_settings">Export settings</string>
    <string name="title_import_settings">Import settings</string>
    <string name="summary_custom_ports">Allow the input of custom ports in the DNS fields.</string>
    <string name="title_advanced_settings">Advanced settings</string>
    <string name="title_custom_ports">Custom ports</string>
    <string name="summary_advanced_settings">Enable the advanced settings</string>
    <string name="title_rules_activated">Local rules</string>
    <string name="summary_rules_activated">Use the rules configured in the main menu</string>
    <string name="both">Both</string>
    <string name="search_by_target">Search by target</string>
    <string name="show_local_entries">Show rules resolving to a loopback address</string>
    <string name="file_hosts">Hosts file</string>
    <string name="file_dnsmasq">Dnsmasq file</string>
    <string name="file_justdomains">Domain list file</string>
    <string name="show_normal_entries">Show normal entries</string>
    <string name="show_wildcard_entries">Show wildcard entries</string>
    <string name="default_dns1" translatable="false">8.8.8.8</string>
    <string name="default_dns2" translatable="false">8.8.4.4</string>
    <string name="hint_dns1">Primary server</string>
    <string name="hint_dns2">Secondary server</string>
    <string name="hint_dns_entry_name">Name</string>
    <string name="hint_pin">PIN</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
</resources>