<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/windowBackground"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp">

    <TextView
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pin_dialog_title" />

    <TextView
        style="@style/Base.TextAppearance.AppCompat.Subhead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#9E9E9E" />

    <com.frostnerd.utils.design.MaterialEditText
        android:id="@+id/pin_dialog_met"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:allowCollapse="false"
        app:animationDuration="0"
        app:image="?attr/keyResource"
        app:indicatorState="undefined"
        app:indicatorVisibilityWhenUnused="hidden"
        app:labelText="PIN"
        app:revealDelay="0"
        app:revealType="revealInstant">

        <EditText
            android:id="@+id/pin_dialog_pin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/inputElementColor"
            android:cursorVisible="true"
            android:hint="@string/hint_pin"
            android:inputType="numberPassword"
            android:textColor="#FFF" />
    </com.frostnerd.utils.design.MaterialEditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pin_dialog_text" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#9E9E9E" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/pin_dialog_ok"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok" />

            <Button
                android:id="@+id/pin_dialog_cancel"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel" />
        </LinearLayout>

    </RelativeLayout>
</LinearLayout>