<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radio_dnsmasq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/file_dnsmasq"
            android:textColor="?android:attr/textColor" />

        <RadioButton
            android:id="@+id/radio_hosts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/file_hosts"
            android:textColor="?android:attr/textColor" />

        <RadioButton
            android:id="@+id/radio_justdomains"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/file_justdomains"
            android:textColor="?android:attr/textColor" />
    </RadioGroup>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:background="?attr/inputElementColor"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/select_file" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />

</LinearLayout>