<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".activities.MainActivity">

        <TextView
            android:id="@+id/text"
            style="@style/Base.TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:textColor="#FFFFFF" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.frostnerd.utils.design.MaterialEditText
            android:id="@+id/met_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:allowCollapse="false"
            app:image="@drawable/ic_language"
            app:maxCharLength="50"
            app:revealDelay="0"
            app:revealType="revealInstant">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_dns_entry_name"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:nextFocusDown="@id/dns1"
                android:nextFocusForward="@id/dns1"
                android:text=""
                android:textColor="#FFF">

                <requestFocus />
            </EditText>
        </com.frostnerd.utils.design.MaterialEditText>

        <LinearLayout
            android:id="@+id/wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.frostnerd.utils.design.MaterialEditText
                android:id="@+id/met_dns1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:allowCollapse="false"
                app:image="@drawable/ic_language"
                app:revealDelay="0"
                app:revealType="revealInstant">

                <EditText
                    android:id="@+id/dns1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789."
                    android:hint="@string/hint_dns1"
                    android:imeOptions="actionNext"
                    android:inputType="numberDecimal"
                    android:nextFocusDown="@id/dns2"
                    android:nextFocusForward="@id/dns2"
                    android:nextFocusUp="@id/name"
                    android:text="@string/default_dns1"
                    android:textColor="#FFF" />
            </com.frostnerd.utils.design.MaterialEditText>


            <com.frostnerd.utils.design.MaterialEditText
                android:id="@+id/met_dns2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:allowCollapse="false"
                app:image="@drawable/ic_language"
                app:revealDelay="0"
                app:revealType="revealInstant">

                <EditText
                    android:id="@+id/dns2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789."
                    android:hint="@string/hint_dns2"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal"
                    android:nextFocusUp="@id/dns1"
                    android:text="@string/default_dns2"
                    android:textColor="#FFF" />
            </com.frostnerd.utils.design.MaterialEditText>

            <LinearLayout
                android:id="@+id/default_dns_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/inputElementColor"
                android:clickable="true"
                android:focusable="true"
                android:onClick="openDefaultDNSDialog"
                android:padding="10dp">

                <ImageButton
                    android:id="@+id/default_dns_view_image"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:background="?attr/inputElementColor"
                    android:src="@drawable/ic_action_import" />

                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="#FFF" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/default_dns"
                    android:textColor="#FFF" />
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <View
                android:id="@+id/middle"
                android:layout_width="1dp"
                android:layout_height="1dp"
                android:layout_centerInParent="true" />

            <Button
                android:id="@+id/cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="3dp"
                android:layout_marginRight="3dp"
                android:layout_toLeftOf="@id/middle"
                android:layout_toStartOf="@id/middle"
                android:background="?attr/inputElementColor"
                android:text="@string/cancel"
                android:textColor="#FFF" />

            <Button
                android:id="@+id/done"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginStart="3dp"
                android:layout_toEndOf="@id/middle"
                android:layout_toRightOf="@id/middle"
                android:background="?attr/inputElementColor"
                android:text="@string/done"
                android:textColor="#FFF" />
        </RelativeLayout>
    </LinearLayout>

</ScrollView>

